--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".Fragment_scan">
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/textView3"
