--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    style="@style/myStyle">
 
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_scan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#62B9FF"
-            android:text="스캔" />
-
-        <Button
-            android:id="@+id/btn_QR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#62B9FF"
-            android:text="QR 코드생성" />
-
-
-        <Button
-            android:id="@+id/btn_wifiList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#62B9FF"
-            android:text="Wifi 목록" />
-
-
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/main_frame"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/withfi_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"></androidx.viewpager.widget.ViewPager>
 
-</LinearLayout>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#9A9A9A"
+            app:itemBackground="@color/cardview_light_background"
+            app:itemIconTint="@drawable/item_color"
+            app:itemTextAppearanceActive="@menu/bottombar_menu"
+            app:itemTextColor="@drawable/item_color"
+            app:menu="@menu/bottombar_menu" />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
