Add QRmaker to adapt QR code

--- a/app/src/main/res/layout/activity_fragment__q_r.xml
+++ b/app/src/main/res/layout/activity_fragment__q_r.xml
@@ -8,13 +8,38 @@
     tools:context=".Fragment_QR">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/wifi_name_QR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QR코드 프래그먼트"
+        android:text="아직 생성되지 않았습니다."
         android:textColor="@android:color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/QR_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/QR_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:src="@drawable/qricon_n"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:id="@+id/btn_qrmaker"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/roundedbutton"
+        android:text="QR코드 생성하기"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/QR_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
