Add camera, file comission

--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -6,14 +6,24 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="스캔하는 프래그먼트"
-        android:textColor="#100909"
+    <ImageButton
+        android:id="@+id/ib_shuttle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/withfi_shutter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sv_camera" />
+
+    <SurfaceView
+        android:id="@+id/sv_camera"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/ib_shuttle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
