--- a/app/src/main/res/layout/activity_fragment_now.xml
+++ b/app/src/main/res/layout/activity_fragment_now.xml
@@ -46,4 +46,16 @@
         app:layout_constraintBottom_toTopOf="@+id/wifi_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/TV_wifiCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="3dp"
+        android:text="총 0개의 wifi가 있습니다."
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
