--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -14,10 +14,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sv_camera" />
+        app:layout_constraintTop_toBottomOf="@+id/camera_frameLayout" />
 
-    <SurfaceView
-        android:id="@+id/sv_camera"
+    <FrameLayout
+        android:id="@+id/camera_frameLayout"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginBottom="20dp"
