--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scan_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1F1F1">
@@ -58,6 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
