--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -36,12 +36,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:background="#FFFFFF"
         android:shadowDx="3"
         android:shadowDy="3"
         android:shadowRadius="3"
-        android:text="당신이 찾는 비밀번호 "
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -62,8 +64,9 @@
 
     <Button
         android:id="@+id/checkbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="71dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/roundedbutton"
         android:text="확인"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -84,6 +87,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
     </com.google.android.gms.ads.AdView>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호를 먼저 스캔하세요."
+        android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
