--- a/app/src/main/res/layout/activity_fragment_scan.xml
+++ b/app/src/main/res/layout/activity_fragment_scan.xml
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
     </com.google.android.gms.ads.AdView>
-
+    <!-- avoid Error-->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
