--- a/app/src/main/res/layout/activity_fragment__q_r.xml
+++ b/app/src/main/res/layout/activity_fragment__q_r.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".Fragment_QR">
+    tools:context=".Fragment.Fragment_QR">
 
     <TextView
         android:id="@+id/wifi_name_QR"
