--- a/app/src/main/res/layout/activity_fragment_now.xml
+++ b/app/src/main/res/layout/activity_fragment_now.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1F1F1"
-    tools:context=".Fragment_now">
+    tools:context=".Fragment.Fragment_now">
 
     <TextView
         android:id="@+id/textView5"
